stage03/demo-service/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-service
  labels:
    internal-web-gateway-access: "true"
    trust.tc.jku.internal/internal-ca: "true"
