stage03/demo-service/manifests/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-service
  labels:
    internal-web-gateway-access: "true"
    trust.tc.jku.internal/internal-ca: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service
  namespace: demo-service
spec:
  replicas: 1
  # Limit revision history to limit clutter
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-service
    spec:
      # 12s drain + 10s shutdown timeout leaves 8s of safety margin.
      terminationGracePeriodSeconds: 30
      securityContext:
        # Comply with PSA Restricted 
        # Do not run as root
        runAsNonRoot: true
        # Specify user and group, same as in Dockerfile
        runAsUser: 65532
        runAsGroup: 65532
        # Use default seccomp profile
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: demo-service
          image: docker.io/johanneskuhfuss/demo-service:latest
          imagePullPolicy: Always

          # Specify environment variables
          # The first 4 environment variables inject K8s runtime information into the Pod for display purposes
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP

          # Define startup probe (Has the app finished starting?)
          startupProbe:
            httpGet:
              path: /health/startup
              port: https
              scheme: HTTPS
            # Tune the following to your service
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 30

          # Define readiness probe (can this service receive traffic?)
          readinessProbe:
            httpGet:
              path: /health/ready
              port: https
              scheme: HTTPS
            # Tune the following to your service
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2

          # Define liveness probe (is the app live / not stuck?)
          livenessProbe:
            httpGet:
              path: /health/live
              port: https
              scheme: HTTPS
            # Tune the following to your service
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          # Tune the following to your service
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              memory: 128Mi

          securityContext:
            # Do not allow service to gain privileges
            allowPrivilegeEscalation: false
            # Do not allow to run privileged
            privileged: false
            # Keep root file system read-only
            readOnlyRootFilesystem: true
            # Drop all capabilities
            # Add back selectively if needed
            capabilities:
              drop:
                - ALL
          # Mount volume with certificate
          volumeMounts:
            - name: backend-tls
              mountPath: /var/run/demo-service/tls
              readOnly: true
      # Volume for the certificate
      volumes:
        - name: backend-tls
          secret:
            secretName: demo-service-backend-tls
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-service
spec:
  selector:
    app.kubernetes.io/name: demo-service
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
