stage03/demo-service/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-service
  namespace: demo-service
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-web
      namespace: observability
      sectionName: demo-service

  hostnames:
    - demo.tc.jku.internal

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: demo-service
          port: 80
